2014-05-28  Dmitry Antipov  <dmantipov@yandex.ru>

	Refactor mouse positioning stuff to avoid code duplication.
	* frame.h (frame_char_to_pixel_position): New function.
	(x_set_mouse_position): Rename to...
	(frame_set_mouse_position): ...new function.
	(frame_set_mouse_pixel_position): Add prototype.
	* nsterm.m, w32term.c, xterm.c (x_set_mouse_pixel_position):
	Rename to frame_set_mouse_pixel_position.
	* frame.c (Fset_mouse_pixel_position, Fset_mouse_position):
	Adjust users.
	* xterm.h, w32term.h ( x_set_mouse_position)
	(x_set_mouse_pixel_position): Remove prototypes.

2014-05-28  Dmitry Antipov  <dmantipov@yandex.ru>

	On X, always make pointer visible when deleting frame (Bug#17609).
	* frame.c (frame_make_pointer_visible, frame_make_pointer_invisible):
	Pass frame as arg.
	* frame.h (frame_make_pointer_visible, frame_make_pointer_invisible):
	Adjust prototypes.
	* cmds.c (Fself_insert_command): Use SELECTED_FRAME.
	* keyboard.c (gobble_input): If there is no terminal input error,
	make sure the pointer is visible for all frames on this terminal.
	* xterm.c (x_free_frame_resources): Enable pointer visibility if
	it was previously disabled.

2014-05-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* data.c (Fzerop): Move to Elisp.
	(syms_of_data): Don't defsubr it.
	* keyboard.c (echo_keystrokes_p): New function.
	(read_char, record_menu_key, read_key_sequence): Use it.

	* callint.c (Qfuncall_interactively): New var.
	(Qcall_interactively): Remove.
	(Ffuncall_interactively): New function.
	(Fcall_interactively): Use it.
	(syms_of_callint): Defsubr it.

2014-05-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* bytecode.c (FETCH) [BYTE_CODE_SAFE]: Check the bytecode wasn't
	relocated from under us.

2014-05-27  Fabrice Popineau  <fabrice.popineau@gmail.com>

	* Makefile.in (C_HEAP_SWITCH): Get the predefined heap size from
	configure.
	(ADDSECTION, MINGW_TEMACS_POST_LINK): Remove, no longer used.
